# IMDbPy

./: .env.default  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  commands.py  handlers.py  imdb.py  schemas.py  views.py
app/services/: imdb.py  redis.py
config/: base.py  testing.py
tests/: conftest.py  test_commands.py  test_handlers.py  test_imdb.py  test_views.py
tests/fixtures/: ratings.html  ratings_page_one.html  ratings_page_two.html  ratings_without_footer.html  ratings_without_next_page.html
tests/services/: test_imdb.py  test_redis.py
