[tool.poetry]
name = "imdbpy"
version = "0.1.0"
description = ""
authors = ["Rutger Mensch"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
beautifulsoup4 = "4.11.1"
flask = "2.2.2"
marshmallow = "3.19.0"
openpyxl = "3.0.10"
python = "^3.11"
python-dotenv = "0.21.0"
requests = "2.28.1"
redis = "4.4.0"
rich = "12.6.0"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
coverage = "7.0.0"
flake8 = "6.0.0"
isort = "5.11.1"
mypy = "0.991"
pytest = "7.2.0"
pytest-env = "0.8.1"

[tool.poetry.group.types.dependencies]
types-beautifulsoup4 = "4.11.6.1"
types-openpyxl = "3.0.4.3"
types-redis = "4.3.21.6"
types-requests = "2.28.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
env = ["ENV = testing"]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.coverage.report]
include = ["app/*"]